Project loading hangs
Steps to reproduce:
- Download the
CLIPS/john666_fade_test_clip0*.mkv
as described in https://phabricator.freedesktop.org/T7862#96935 rm " CLIPS/"*proxy*
-
pitivi john666_test_fades_restored-post-second-crash.xges
, notice a missing clip dialog for john666_fade_test_clip01.mkv - Find it, select it, and click Open. Notice the project loading hangs at 40%