project: Compute relocation URIs in missing-uri signal

Until know we were doing it outside of the signal and subclasses didn't
have a chance to know that some assets was relocated.

This is required so that Pitivi can handle proxy delation and relocated
assets.

Required for https://gitlab.gnome.org/GNOME/pitivi/issues/2203